objects/Survey_Response__x.object
<CustomObject>
    <externalDataSource>Product_Catalog</externalDataSource>
    <externalName>northwind.survey_responses</externalName>
    <fields>
        <fullName>Comments__c</fullName>
        <externalDeveloperName>comments</externalDeveloperName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_id__c</fullName>
        <externalDeveloperName>customer_id</externalDeveloperName>
        <label>Account</label>
        <length>128</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Response_ext_id__c</fullName>
        <externalDeveloperName>response_ext_id</externalDeveloperName>
        <label>Response ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <externalDeveloperName>score</externalDeveloperName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_on__c</fullName>
        <externalDeveloperName>submitted_on</externalDeveloperName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_type__c</fullName>
        <externalDeveloperName>survey_type</externalDeveloperName>
        <label>Survey Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Response_ext_id__c</columns>
        <columns>Customer_id__c</columns>
        <columns>Score__c</columns>
        <columns>Submitted_on__c</columns>
        <columns>Survey_type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Survey Responses</pluralLabel>
</CustomObject>